--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 
     <name>Restaurant Voting Application</name>
     <description>TopJava graduation project application</description>
-    <url>https://javaops.ru/view/topjava2</url>
+    <url></url>
 
     <properties>
         <java.version>17</java.version>
@@ -58,6 +58,19 @@
             <artifactId>springdoc-openapi-security</artifactId>
             <version>${springdoc.version}</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger2 -->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui -->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+
 
         <!--cache-->
         <dependency>
